Settings: Add ability to permanently hide apps from recents [3/3]
Change-Id: I86fa933d9147ed8303b1c7d4fb8cc480c6937644
Signed-off-by: mydongistiny <jaysonedson@gmail.com>
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3377,6 +3377,9 @@
             <meta-data android:name="com.android.settings.summary"
                 android:resource="@string/superior_dashboard_summary"/>
         </activity>
+		
+        <!-- Hide Apps from Recents (HAFR) -->
+        <activity android:name="com.superior.settings.hideappfromrecents.HAFRAppListActivity" />
 
     </application>
 </manifest>
