--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,2 +1,3 @@
-&ref_files
-files: []
+files:
+  - source: res/values/superior_strings.xml
+    translation: /res/values-%android_code%/%original_file_name%
